added VM options