@@ -7,7 +7,11 @@ ENSEA TD Project runner
 1. In the IDE, go to File > New > Project from Version Control, under URL paste this repo's url (found under <>Code > HTTPS)
 2. Make sure you have javafx downloaded in a folder where you can find it
 3. Go to File > Project Structure > Libraries > Add, and copy the path of the /lib folder of javafx
-4. In the top right, click on Main > Click on the three dots next to Main > Edit configuration, under VM options, replace the folder path (C:/...) with your /lib folder's path
+4. In the top right, click on Main > Edit configuration > Main, under VM options, copy this :
+```
+--module-path <./lib file path> --add-modules javafx.controls
+```
+Make sure you replace <./lib file path> with your /lib folder's path
 
 You can now run the code. Everything should work fine.
 If the IDE tells you that there is a problem with the JDK, click on solve automatically and wait for the download to end, then run the code again
